--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>登录 - 破天充值系统</title>
+  <title>登录 - 优图充值系统</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     * { box-sizing: border-box; }
