--- a/templates/admin.html
+++ b/templates/admin.html
@@ -553,8 +553,8 @@
                 <th>账号</th>
                 <th>套餐</th>
                 <th>状态</th>
-                <th>创建者</th>
-                <th>接单人</th>
+                                    <th>提交者</th>
+                    <th>接单者</th>
                 <th>创建时间</th>
                 <th>操作</th>
               </tr>
